# synonym

./: Cargo.toml
concurrent_tasks/: Cargo.toml  README.md
concurrent_tasks/src/: lib.rs  main.rs
concurrent_tasks/tests/: concurrent_tasks.rs
wasm_integration/: Cargo.toml  README.md  index.html  script.js
wasm_integration/pkg/: package.json  wasm_integration.d.ts  wasm_integration.js  wasm_integration_bg.wasm  wasm_integration_bg.wasm.d.ts
wasm_integration/src/: lib.rs
