[package]
name = "concurrent_tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
features = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-test = "0.2"
